<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="91dp"
        android:layout_height="72dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/signup" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="319dp"
        android:layout_height="102dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="textEmailAddress"
        android:text="Registro de Cuenta"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tviniciarsesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="¿Ya tiene cuenta? Inicie Sesión ahora"
        android:textColor="#1976D2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/btnregistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#20A5ED"
        android:text="Crear Cuenta"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tviniciarsesion" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="297dp"
        android:layout_height="53dp"

        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/edtcorreo"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtcontrasenia"
            android:layout_width="297dp"
            android:layout_height="53dp"
            android:backgroundTint="#FFFFFF"
            android:ems="15"
            android:hint="@string/valclave" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/edtnombre"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:drawableRight="@drawable/cliente"
        android:ems="10"
        android:hint="@string/valnombre"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtdni"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:drawableRight="@drawable/usuarios"
        android:ems="10"
        android:hint="@string/valdni"

        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/edtnombre" />

    <EditText
        android:id="@+id/edtcorreo"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:drawableRight="@drawable/email"
        android:ems="10"
        android:hint="@string/valcorreo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/edtdni" />

</androidx.constraintlayout.widget.ConstraintLayout>